--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,6 +405,7 @@
 **** xref:6.6-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 **** xref:6.6-release-notes.adoc#improvement[Improvement]
 **** xref:6.6-release-notes.adoc#additions[Additions]
+**** xref:6.6-release-notes.adoc#change[Change]
 **** xref:6.6-release-notes.adoc#bug-fix[Bug fix]
 *** TinyMCE 6.5.1
 **** xref:6.5.1-release-notes.adoc#overview[Overview]
