--- a/modules/ROOT/pages/dialog-configuration.adoc
+++ b/modules/ROOT/pages/dialog-configuration.adoc
@@ -63,7 +63,10 @@ Each of the event callback functions - `+onAction+`, `+onSubmit+`, `+onCancel+`,
 
 Any callback function that is not passed a `+details+` object assumes that the dialog will only contain one component which can trigger it or that it does not matter if the function is triggered by multiple components. For example, `+onSubmit+` is only triggered when a user clicks on a *Submit* type footer button, and {productname} assumes that a dialog will only have one *Submit* type button. In comparison, `+onCancel+` and `+onClose+` are both triggered by clicking the `+X+` button in the top right of a dialog or by clicking a *Cancel* type footer button. These two buttons have the same functionality, and therefore {productname} does not differentiate between them.
 
-== Configure a dialog without a footer
+[[configuration-parameters]]
+== Configuration parameters
+
+=== Configure a dialog without a footer
 
 include::partial$misc/admon-requires-6.6v.adoc[]
 
@@ -87,3 +90,4 @@ tinymce.activeEditor.windowManager.open({
   buttons: []
 });
 ----
+
