DOC-2099: dialog-configuration.adoc
Added five include statements for to-be-created partials (which will be created and written up in other tickets).

--- a/modules/ROOT/pages/dialog-configuration.adoc
+++ b/modules/ROOT/pages/dialog-configuration.adoc
@@ -91,3 +91,12 @@ tinymce.activeEditor.windowManager.open({
 });
 ----
 
+include::partial$configuraton/dialog_align.adoc[]
+
+include::partial$configuraton/dialog_border.adoc[]
+
+include::partial$configuraton/dialog_button.adoc[]
+
+include::partial$configuraton/dialog_persistent.adoc[]
+
+include::partial$configuraton/dialog_streamContent.adoc[]
