--- a/modules/ROOT/partials/configuration/dialog_align.adoc
+++ b/modules/ROOT/partials/configuration/dialog_align.adoc
@@ -1,5 +1,5 @@
 [[align]]
-== `align`
+=== `align`
 
 `+align+` is an optional property to add to dialog labels to set the alignment of the label text.
 
