DOC-2103: dialog_border.adoc
Added include statement pointing to `/partials/misc/admon-requires-6.6v.adoc`.

--- a/modules/ROOT/partials/configuration/dialog_border.adoc
+++ b/modules/ROOT/partials/configuration/dialog_border.adoc
@@ -1,6 +1,8 @@
 [[border]]
 === `border`
 
+include::partial$misc/admon-requires-6.6v.adoc[]
+
 With the property set to true, a border displays around the iframe.
 
 This iframe is also highlighted when it takes focus (by, for example, using the Tab key to move focus to iframe).
