DOC-2093: 6.6-release-notes.adoc
Added write-up of TINY-0039, AI plugin menu items and toolbar items added to TinyMCE default mene and toolbar.

Copy edit to AI plugin section.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -28,7 +28,7 @@ The following new Premium plugin was released alongside {productname} 6.6.
 
 The new Premium plugin, **AI** // description here.
 
-For information on the **<Premium plugin name>** see xref:ai.adoc[AI].
+For information on **AI**, see xref:ai.adoc[AI].
 
 
 [[accompanying-premium-skins-and-icon-packs-changes]]
@@ -129,12 +129,20 @@ For details see the xref:dialog-configuration.adoc#configuration-parameters[Conf
 
 // link out to ai premium plugin page here?
 
-=== Add `ai` buttons to the default toolbar and menubar.
+=== AI plugin toolbar items added to the default toolbar and AI plugin menu items added to the default menu bar.
 //#TINY-9939
 
-// CCFR here
+With the release of the new xref:new-premium-plugin[AI Premium plugin], {productname} defaults have been updated.
 
-// link out to ai premium plugin page here?
+If the AI plugin is added to a {productname} configuration, by default:
+
+. the _AI dialog_ and _AI shortcuts_ menu items will appear in the {productname} *Tools* menu; and
+
+. the _AI dialog_ and _AI shortcuts_ toolbar items will appear in the {productname} toolbar.
+
+NOTE: further **AI**-specific menu items are generated based on the setting of the _quick prompts_ option. These will appear as sub-menus items of the _AI shortcuts_ menu and toolbar items.
+
+For more information on **AI**, see xref:ai.adoc[AI].
 
 
 [[change]]
