--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -79,12 +79,16 @@ This new inline dialog option allows the inline dialog to be positioned at the b
 For details see the xref:dialog-configuration.adoc#configuration-parameters[Configuration parameters section] of the Dialog configuration documentation.
 
 
-=== Added a new property — `persistent` to inline dialog configurations.
+=== Added a new property — `persistent` — for inline dialog configurations that controls dialog persistence when not in focus.
 //#TINY-9991
 
-This new option allows the inline dialog to be persistent, meaning that it will not be closed when the user clicks outside of the dialog
+A new, and optional, property, — `+persistent+` — is available for inline dialog configuration.
 
-// more CCFR here.
+When this property is set to `true`, an inline dialog will stay open when focus is switched away from the dialog and towards the {productname} editor, or elsewhere.
+
+If the property is not explicitly set, it is set to `+false+`, matching inline dialog behavior prior to this property being added to {productname}.
+
+Also, setting the property to `+true+` does not over-ride normal mechanisms for closing a dialog, such as clicking the _Close_ button or pressing the *Esc* key.
 
 For details see the xref:dialog-configuration.adoc#configuration-parameters[Configuration parameters section] of the Dialog configuration documentation.
 
@@ -100,7 +104,7 @@ With the property set to `true`, frame content will update with `document.write(
 
 For details see the xref:dialog-configuration.adoc#configuration-parameters[Configuration parameters section] of the Dialog configuration documentation.
 
-=== Added a new `border` property for the `iframe` dialog component which controls the visibility of its border.
+=== Added a new property — `border` — for the `iframe` dialog component that controls border visibility.
 //#TINY-10049
 
 A new, and optional, property — `+border+` — is available for the dialog component, `+iframe+`.
