DOC-2093: 6.6-release-notes.adoc
Changed name of the Premium plugin: s/AI/AI Assistant/.

AI Assistant menu names left unchanged in entry regarding TINY-9939.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -24,11 +24,11 @@ New Premium plugin
 
 The following new Premium plugin was released alongside {productname} 6.6.
 
-=== AI 1.0.0
+=== AI Assistant 1.0.0
 
-The new Premium plugin, **AI** // description here.
+The new Premium plugin, **AI Assistant** // description here.
 
-For information on **AI**, see xref:ai.adoc[AI].
+For information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 
 
 [[accompanying-premium-skins-and-icon-packs-changes]]
@@ -110,22 +110,22 @@ For details see the xref:dialog-configuration.adoc#configuration-parameters[Conf
 
 // CCFR here.
 
-For more information on **AI**, see xref:ai.adoc[AI].
+For more information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 
-=== AI plugin toolbar items added to the default toolbar and AI plugin menu items added to the default menu bar
+=== AI Assistant plugin toolbar items added to the default toolbar and AI Assistant plugin menu items added to the default menu bar
 //#TINY-9939
 
 With the release of the new xref:new-premium-plugin[AI Premium plugin], {productname} defaults have been updated.
 
-If the AI plugin is added to a {productname} configuration, by default:
+If the AI Assistant plugin is added to a {productname} configuration, by default:
 
 . the _AI dialog_ and _AI shortcuts_ menu items will appear in the {productname} *Tools* menu; and
 
 . the _AI dialog_ and _AI shortcuts_ toolbar items will appear in the {productname} toolbar.
 
-NOTE: further **AI**-specific menu items are generated based on the setting of the _quick prompts_ option. These will appear as sub-menus items of the _AI shortcuts_ menu and toolbar items.
+NOTE: further **AI Assistant**-specific menu items are generated based on the setting of the _quick prompts_ option. These will appear as sub-menus items of the _AI shortcuts_ menu and toolbar items.
 
-For more information on **AI**, see xref:ai.adoc[AI].
+For more information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 
 
 [[improvement]]
