--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -1,9 +1,9 @@
-= AI plugin
+= AI Assistant plugin
 :navtitle: AI
 :description: Sends queries to registered AI APIs and sets the results in the document or temporarily stores the results for later use.
 :description_short: Query AI APIs and accept results.
 :keywords: plugin, ai, artificial intelligence, query, search.
-:pluginname: AI
+:pluginname: AI Assistant
 :plugincode: ai
 :plugincategory: premium
 
