DOC-2026: premium-plugins.adoc
Further unrelated and noticed-on-the-fly copy-edit.

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -91,7 +91,7 @@ a|
 [.lead]
 xref:inline-css.adoc[Inline CSS]
 
-Turn {productname} documents into single files with inline CSS, ready, in particular for sending as HTML-formatted emails.
+Turn {productname} documents into single files with inline CSS, ready, in particular, for sending as HTML-formatted emails.
 
 a|
 [.lead]
