--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -28,7 +28,7 @@ For example:
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
-  plugins: '{plugincode}',
+  plugins: 'ai',
   toolbar: 'aidialog aishortcuts',
   ai_request: (request) => new Promise(),
   ai_shortcuts: [],
